--- a/views/listarperros.ejs
+++ b/views/listarperros.ejs
@@ -36,7 +36,7 @@
                                     </div>
                                     <!--boton-->
                                     <div class="contBot">
-                                        <form action="/detalleperro.html" method="GET">
+                                        <form action="/perro" method="GET">
                                             <input type="submit" class="btn btn-success ver" value="Ver Detalles ">
                                             <input type="hidden" name="idPerro" value="<%= p.id%>">
                                         </form>
