Adaptacion rutas en las vistas

--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -68,7 +68,7 @@
         </div>
 
 
-        <form action="/iralistarperrosprotectora" method="GET">
+        <form action="/perrosprotectora" method="GET">
             <div class="botonera">
                 <input type="hidden" name="nombrepro" value="<%= datos.nombre %>">
                 <input type="hidden" name="ident" value="<%= idp %>">
@@ -76,7 +76,7 @@
             </div>
         </form>
 
-        <form action="/iraprotectora" method="GET">
+        <form action="/protectoras" method="GET">
 
 
             <div class="botonera">
