--- a/views/protectoras.ejs
+++ b/views/protectoras.ejs
@@ -41,7 +41,7 @@
                                     <%= p.telefono %>
                                 </p>
                             </div>
-                            <form action="/detalleprotectora.html" method="GET">
+                            <form action="/protectora" method="GET">
                                 <input type="hidden" name="ident" value="<%= p.id %>">
                                 <input type="submit" class="btn btn-info botonInfo" value="Info">
                             </form>
