Modificacion nombre rutas login y logout

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,7 +23,7 @@
                     <!--Boton para poder cerrar sesion-->
                     <div class="col-lg-12">
                         <form>
-                            <button type="submit" formmethod="get" formaction="/cerrarSesion" class="btn btn-danger">Cerrar Sesión</button>
+                            <button type="submit" formmethod="get" formaction="/logout" class="btn btn-danger">Cerrar Sesión</button>
                         </form>
                     </div>
                     <!--Boton que redirige a panel de modificacion del perfil de protectora -->
