--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-4 col-md-4">
-                <form id="login" class="form-login" action="/iniciarSesion" method="POST">
+                <form id="login" class="form-login" action="/login" method="POST">
                 <h2>Bienvenido de nuevo</h2>
                 <% if(errors!=undefined || mensaje!=undefined){%>
                     <div class="alert alert-danger page-alert" id="alert-3" >
