Modificacion rutas Registrar

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -74,8 +74,8 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content bcolorfondo">
             <div class="modal-body registrarseStyle">
-                <a href="registroAdoptante"><button type="button" class="btn btn-primary botonReg tnegrita" data-toggle="modal" data-target="#myModal">Como Adoptante</button></a>
-                <a href="registroProtectora"><button type="button" class="btn btn-primary botonReg tnegrita" data-toggle="modal" data-target="#myModal">Como Protectora</button></a>
+                <a href="/registro/adoptante"><button type="button" class="btn btn-primary botonReg tnegrita" data-toggle="modal" data-target="#myModal">Como Adoptante</button></a>
+                <a href="/registro/protectora"><button type="button" class="btn btn-primary botonReg tnegrita" data-toggle="modal" data-target="#myModal">Como Protectora</button></a>
             </div>
         </div>
     </div>
