--- a/views/registroAdoptante.ejs
+++ b/views/registroAdoptante.ejs
@@ -50,7 +50,7 @@
                 </div>
             <%}}%>
 			
-			<form id="login" class="form-login formRegistro justify" action="/registroAdoptante1" method="POST">
+			<form id="login" class="form-login formRegistro justify" action="/regadoptante" method="POST">
 					 <h1>Rellenar todos los campos disponibles.</h1>
 					<div class="form-group col-md-12">
 					  <label for="inputEmail4">Email</label>
