--- a/views/registroProtectora.ejs
+++ b/views/registroProtectora.ejs
@@ -51,7 +51,7 @@
                 </div>
             <%}}%>
 			         
-			<form id="login" class="form-login formRegistro justify" action="/registroProtectora1" method="POST">
+			<form id="login" class="form-login formRegistro justify" action="/regprotectora" method="POST">
 				<h1>Rellenar todos los campos disponibles.</h1>
 			  <div class="form-row">
 				<div class="form-group col-md-12">
@@ -91,10 +91,12 @@
 				<label for="inputAddress2">Descripción</label>
 				<textarea class="form-control" name="descripcion" id="exampleFormControlTextarea1" rows="3"></textarea>
 			  </div>
+                                
 			  <div class="form-group col-md-4">
 					<label for="inputAddress2"></label>
 					<input type="hidden">
 			  </div>
+                                
 			  <button type="submit" class="btn btn-primary tnegrita col-md-4">Registrar</button>
 			</form>
         </div>
