--- a/views/registroAdoptante.ejs
+++ b/views/registroAdoptante.ejs
@@ -12,13 +12,6 @@
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/logo.png" />
     <link rel="stylesheet" type="text/css" href="css/estilocomoadoptar.css">
-	<style>
-		.formRegistro{
-			width:50%;
-			margin-left:5%;
-			display: inline-block;
-		}
-	</style>
 </head>
 
 <body>
@@ -57,7 +50,7 @@
                 </div>
             <%}}%>
 			
-			<form id="login" class="form-login formRegistro justify" action="/registroAdoptante1" method="POST">
+			<form id="login" class="form-login formRegistro justify" action="/regadoptante" method="POST">
 					 <h1>Rellenar todos los campos disponibles.</h1>
 					<div class="form-group col-md-12">
 					  <label for="inputEmail4">Email</label>
