--- a/views/detalleperro.ejs
+++ b/views/detalleperro.ejs
@@ -21,7 +21,15 @@
         </h1>
         <div class="content">
             <div class="imagen">
-                <img class="img-thumbnail" src="img/perro/">
+                <img class="img-thumbnail" src="img/perro/<%= perro.id %>">
+                <% if(tipo === "Adoptante"){ %>
+                    <form action="/adoptaperro" method="GET">
+                        <div class="botonera">
+                            <input type="hidden" name="idPerro" value="<%= perro.id %>">
+                            <input type="submit" class="btn btn-primary volver" value="adopta a <%= perro.nombre %> !">
+                        </div>
+                    </form>
+                    <% } %>
             </div>
             <div class="datos">
                 <p class="negrita">Protectora:
@@ -50,18 +58,17 @@
                 </p>
             </div>
         </div>
-        <form action="/detalleprotectora.html" method="GET">
+        <form action="/protectora" method="GET">
             <div class="botonera">
                 <input type="hidden" name="ident" value="<%= perro.idProtectora %>">
                 <input type="submit" class="btn btn-success volver" value="¡Ver información de la protectora!">
             </div>
         </form>
-        <form action="/iralistarperros" method="GET">
+        <form action="/perros" method="GET">
             <div class="botonera">
                 <input type="submit" class="btn btn-info volver" value="Volver">
             </div>
         </form>
-
         <%- include('./footer'); %>
 </body>
 
