Actualización, eliminar y aceptar protectoras

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -51,7 +51,7 @@
                     <% }else if(tipo === "Administrador"){%>
                         <li><a class="nav-link" href="/listaAdoptantes">Adoptantes</a></li>
                         <li><a class="nav-link" href="/listaProtectoras">Protectoras</a></li>
-                        <li><a class="nav-link" href="#">Solicitudes de protectoras</a></li>
+                        <li><a class="nav-link" href="/listaSolicitudesProtectoras">Solicitudes de protectoras</a></li>
                     <%} else {%>
 
                         <li><a class="nav-link" href="comoadoptar">Cómo adoptar</a></li>
@@ -61,9 +61,6 @@
                         <li><a class="nav-link" href="protectoras">Protectoras</a></li>
                         <!-- Redirige a la lista de protectoras -->
                         <% } %>
-
-
-
 
             </ul>
         </div>
