Cambio footer email
footer cambio email

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -29,7 +29,7 @@
                     <ul>
                         <li>
                             <div class="input-append newsletter-box text-center">
-                                <input type="text" class="full text-center" placeholder="appet@ucm.es">
+                                <input type="text" class="full text-center" placeholder="appet@ucm.es" readonly>
                             </div>
                         </li>
                     </ul>
