--- a/views/detalleperro.ejs
+++ b/views/detalleperro.ejs
@@ -24,7 +24,7 @@
                 <img class="img-thumbnail" src="img/perro/<%= perro.id %>">
 
                 <% if(tipo === "Adoptante"){ %>
-                    <form action="/enviarsolicitudadopcion" method="GET">
+                    <form action="/formularioAdopcion" method="GET">
                         <div class="botonera">
                             <input type="hidden" name="idPerro" value="<%= perro.id %>">
                             <input type="hidden" name="idProtectora" value="<%= perro.idProtectora %>">
