--- a/views/administrarProtectoras.ejs
+++ b/views/administrarProtectoras.ejs
@@ -18,7 +18,7 @@
             <div class="container">
                     <div class="row col-md-offset-2 col-md-8 custyle">
                             <h2>Lista de protectoras</h2>
-                        <% if(protectoras.length === 0){ %>
+                        <% if(protectoras===undefined || protectoras.length === 0){ %>
                             <div class="alert alert-warning alerta">
                                 No hay protectoras actualmente
                             </div>
