Refactorizacion Mis Perros

--- a/views/misperros.ejs
+++ b/views/misperros.ejs
@@ -37,7 +37,7 @@
                                     </div>
                                     <!--boton-->
                                     <div class="contBot">
-                                        <form action="/detalleperro.html" method="GET">
+                                        <form action="/perro" method="GET">
                                             <input type="submit" class="btn btn-success ver" value="Ver a <%=p.nombre%> ">
                                             <input type="hidden" name="idPerro" value="<%= p.id%>">
                                         </form>
