--- a/views/misperros.ejs
+++ b/views/misperros.ejs
@@ -16,7 +16,26 @@
 
 <body>
     <%- include('./header'); %>
+    <% if(msg!==undefined){ %>
+    <div class="modal fade in" id="myModal" role="dialog" style="display: block;">
+	<div class="modal-dialog">
+	<!-- Modal content-->
+            <div class="modal-content">
+		<div class="modal-header">
+		  <h4 class="modal-title"><%= msg %></h4>
+		</div>
+		<div class="modal-body">
+		  <p>Pulsa para poder volver a tu perfil.</p>
+		</div>
+		<div class="modal-footer">
+                    <a href="./perfil" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Volver</a>
+		</div>
+            </div>
+	</div>
+    </div>
+    <% } %>
         <div class="listaperros">
+            
             <h3 class="textoo">Mostrando mis perros:
             </h3>
 
