--- a/views/misperros.ejs
+++ b/views/misperros.ejs
@@ -25,10 +25,10 @@
 		  <h4 class="modal-title"><%= msg %></h4>
 		</div>
 		<div class="modal-body">
-		  <p>Pulsa para poder volver a tu perfil.</p>
+		  <p>Pulsa para poder volver a ver tus perros .</p>
 		</div>
 		<div class="modal-footer">
-                    <a href="./perfil" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Volver</a>
+                    <a href="./misperros" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Volver</a>
 		</div>
             </div>
 	</div>
@@ -58,7 +58,7 @@
                                     <div class="contBot">
                                         <form action="/perro" method="GET">
                                             <input type="submit" class="btn btn-success " value="Ver a <%=p.nombre%> ">
-                                            <button type="submit" class="btn btn-danger " formmethod="get" formaction="/eliminar/<%= p.id %>">
+                                            <button type="submit" class="btn btn-danger " formmethod="get" formaction="/eliminarperro">
                                                 <span class="glyphicons glyphicons-bin"></span>
                                             </button>
                                             <input type="hidden" name="idPerro" value="<%= p.id%>">
@@ -84,7 +84,7 @@
                     <input type="submit" class="btn btn-primary nuevoperro" value="Añadir perro">
                 </form>
             </div>
-        </div> -->
+        </div> 
         <%- include('./footer'); %>
 </body>
 
