Validaciones Formulario perro

--- a/views/agregarPerro.ejs
+++ b/views/agregarPerro.ejs
@@ -31,20 +31,20 @@
 			  </div>
                           <div class="form-group col-md-12">
 					<label for="inputAddress">Raza</label>
-					<input type="text" class="form-control" name="raza" id="inputAddress" placeholder="Raza"  required>
+					<input type="text" class="form-control" name="raza" id="inputAddress" placeholder="Raza"  >
 			  </div>	
                           <div class="form-group col-md-4">
 					<label for="inputAddress">Color</label>
-					<input type="text" class="form-control" name="color" id="inputAddress" placeholder="Color"  required>
+					<input type="text" class="form-control" name="color" id="inputAddress" placeholder="Color" >
 			  </div>
                           <div class="form-group col-md-4">
 					<label for="inputAddress">Edad</label>
-					<input type="text" class="form-control" name="edad" id="inputAddress" placeholder="Edad"  required>
+					<input type="number" class="form-control" name="edad" id="inputAddress" placeholder="Edad"  >
 			  </div>
                               
                           <div class="form-group col-md-4">
 					<label for="inputAddress">Peso</label>
-					<input type="text" class="form-control" name="peso" id="inputAddress" placeholder="Peso"  required>
+					<input type="number" class="form-control" name="peso" id="inputAddress" placeholder="Peso" >
 			  </div>
 				
 			  </div>
