Cambio en detalleProtectora para mostrar vista mapa

--- a/views/perfilProtectora.ejs
+++ b/views/perfilProtectora.ejs
@@ -39,7 +39,7 @@
                         </div>
                         <div class="modal-body">
                             <div class="alert alert-warning page-alert" id="alert-3" >
-                                <h3>Aún no has sido aceptado, cry baby <span class="glyphicon glyphicon-tint"></span><span class="glyphicon glyphicon-tint"></span></h3>
+                                <h3>Aún no has sido aceptado por el administrador. Pruebe en unos instantes de nuevo. <span class="glyphicon glyphicon-tint"></span><span class="glyphicon glyphicon-tint"></span></h3>
                             </div>
                         </div>
                     </div>
