--- a/views/perfilProtectora.ejs
+++ b/views/perfilProtectora.ejs
@@ -92,7 +92,7 @@
                         <%=  datos.descripcion %>
                     </p>
                 </div>
-
+				<a href="/modificarPerfil"><button type="button" class="btn btn-primary btn-lg">Modificar mi perfil</button></a>
             </div>
         <%}%>    
 
